# aruco-pose-estimation

./: README.md
main/: CMakeLists.txt  poseEstimateAruco.cpp
main/cameras/: camerasDatabase.json
